# logger

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONFIGURATION.md  Doxyfile  LICENSE  README.md
.github/workflows/: ci.yml
conan/: conanfile.py
conan/profile/: linux  windows
include/logger/: Exceptions.h  LevelNames.h  Logger.h  LoggerFactory.h  Marker.h  MarkerFactory.h
src/: HierarchicalNode.h  ILoggerBackend.h  Log4CxxBackend.cpp  Log4CxxBackend.h  Log4CxxLogger.cpp  Log4CxxLogger.h  Log4CxxPatternTranslator.h  LogRecord.h  Logger.h  LoggerBase.cpp  LoggerBase.h  LoggerConfig.h  LoggerConfigurator.cpp  LoggerConfigurator.h  LoggerFactory.cpp  LoggerFactory.h  LoggerFactoryImpl.cpp  LoggerFactoryImpl.h  LoggerHierarchy.cpp  LoggerHierarchy.h  LoggerUtils.cpp  LoggerUtils.h  SimpleLogger.cpp  SimpleLogger.h  SimpleLoggerBackend.cpp  SimpleLoggerBackend.h  SimpleLoggerPattern.cpp  SinkConfig.h  SpdlogBackend.cpp  SpdlogBackend.h  SpdlogLogger.cpp  SpdlogLogger.h  SpdlogPatternTranslator.h
src/core/: CMakeLists.txt  ILoggerBackend.h  IManagedSinkBackend.h  JsonConfigParser.cpp  JsonConfigParser.h  LazyLogger.cpp  LazyLogger.h  LoggerBase.cpp  LoggerBase.h  LoggerConfig.h  LoggerConfigurator.cpp  LoggerConfigurator.h  LoggerFactory.cpp  LoggerFactoryImpl.cpp  LoggerFactoryImpl.h  LoggerHierarchy.cpp  LoggerHierarchy.h  LoggerUtils.cpp  LoggerUtils.h  MarkerFactory.cpp  ProxyBackend.cpp  ProxyBackend.h  ProxyLogger.cpp  ProxyLogger.h  SinkConfig.h
src/log4cxx/: CMakeLists.txt  Log4CxxBackend.cpp  Log4CxxBackend.h  Log4CxxLogger.cpp  Log4CxxLogger.h  Log4CxxPatternTranslator.cpp
src/simple/: CMakeLists.txt  SimpleLogger.cpp  SimpleLogger.h  SimpleLoggerBackend.cpp  SimpleLoggerBackend.h  SimpleLoggerPattern.cpp  SimpleLoggerPattern.h
src/spdlog/: CMakeLists.txt  SpdlogBackend.cpp  SpdlogBackend.h  SpdlogLogger.cpp  SpdlogLogger.h  SpdlogPatternTranslator.cpp  SpdlogThreadLocal.cpp  SpdlogThreadLocal.h
test/: JsonConfigParserTest.cpp  Log4CxxLoggerTest.cpp  LoggerConfiguratorTest.cpp  LoggerFactoryTest.cpp  LoggerHierarchyTest.cpp  LoggerUtilsTest.cpp  MarkerFactoryTest.cpp  MarkerOverloadTest.cpp  SimpleLoggerBackendTest.cpp  SimpleLoggerPatternTest.cpp  SimpleLoggerTest.cpp  SpdlogBackendTest.cpp  SpdlogLoggerTest.cpp  SpdlogPatternTranslatorTest.cpp
test/core/: JsonConfigParserTest.cpp  LazyLoggerTest.cpp  LoggerConfiguratorTest.cpp  LoggerFactoryTest.cpp  LoggerHierarchyTest.cpp  LoggerUtilsTest.cpp  MarkerFactoryTest.cpp  MarkerOverloadTest.cpp  ProxyBackendTest.cpp  ProxyLoggerTest.cpp
test/helpers/: CMakeLists.txt  TestUtils.cpp  TestUtils.h
test/log4cxx/: CMakeLists.txt  Log4CxxBackendTest.cpp  Log4CxxLoggerTest.cpp  Log4CxxPatternTranslatorTest.cpp
test/simple/: CMakeLists.txt  FlushOnTest.cpp  SimpleLoggerBackendTest.cpp  SimpleLoggerPatternTest.cpp
test/spdlog/: CMakeLists.txt  SpdlogBackendTest.cpp  SpdlogLoggerTest.cpp  SpdlogPatternTranslatorTest.cpp
